cryptsetup (2:1.0.3-1) unstable; urgency=low

  [ Jonas Meurer ]
  * new upstream release, 1.0.3 final
    - Add alignPayload patch by Peter Palfrader (closes: #358388)
    - meaningful exitcodes and password retrying by Johannes Weißl
      (closes: #359277)
  * provida a cryptsetup-udeb package (closes: #358422)
  * remove debian/luksformat.8 in clean target (closes: #358386)
  * fix update-rc.d arguments to start cryptdisks in rc0 and rc6.
    it is not really started [but stopped], but still the links need to be
    named S48cryptdisks. otherwise it will be invoked before umountfs.

 -- Jonas Meurer <mejo@debian.org>  Fri,  7 Apr 2006 11:16:40 +0200

cryptsetup (2:1.0.2+1.0.3-rc3-1) unstable; urgency=low

  [ Jonas Meurer ]
  * new upstream release candidate:
    - fixes sector size of the temporary mapping (closes: #355156)
    - more verbose error logging (closes: #353755, #356288, #258376)
    - upstream accepted my patches to the manpage
  * fixed spelling error in README.Debian
  * removed debian/cryptsetup.sgml, outdated
  * ran ispell against doc files in debian/, fixed many typos
  * change /usr/share/cryptsetup to /lib/cryptsetup in crypttab.5.txt
    (closes: #354910)
  * add --build (and maybe even --host) to configure flags, for
    cross-compiling
  * remove debian/luksformat.8 in clean target
  * fix bashism in cryptdisks. thanks to Michal Politowski
    <mpol@charybda.icm.edu.pl> (closes: #356484)
  * add support for openssl encrypted keys, based on a patch by General Stone
    <generalstone@gmx.net> (closes: #350615)
  * add some code to support gnupg encrypted keys, some parts are missing.

 -- Jonas Meurer <mejo@debian.org>  Fri, 17 Mar 2006 00:42:41 +0100

cryptsetup (2:1.0.2+1.0.3-rc2-1) unstable; urgency=low

  [ Jonas Meurer ]
  * new upstream version 1.0.3-rc2, fixing issues with devmapper
  * new upstream version 1.0.3-rc1, doesn't use essiv per default
  * new upstream version (1.0.2) released